--- a/web/templates/left_menu.xhtml
+++ b/web/templates/left_menu.xhtml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
-        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -8,17 +7,18 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>Facelet Title</title>
+    <h:outputStylesheet library="CSS" name="style_main.css"/>
 </h:head>
 <h:body>
-    <ui:composition template="/templates/library_tamplate.xhtml">
+    <ui:composition>
 
-        <ui:define name="title">
-            #{msg.book_list}
-        </ui:define>
+        <h4>#{msg.genres}</h4>
 
-        <ui:define name="content">
-            текстовый контент
-        </ui:define>
+        <h:dataTable value="#{genres.genreList}" var="g">
+            <h:column>
+                #{g.name}
+            </h:column>
+        </h:dataTable>
 
     </ui:composition>
 </h:body>
