--- a/web/resources/CSS/style_main.css
+++ b/web/resources/CSS/style_main.css
@@ -1,10 +1,3 @@
-ul.nav a, ul.nav a:visited {
-    padding: 5px 5px 5px 15px;
-    display: block;
-    text-decoration: none;
-    color: #000;
-}
-
 body {
     font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
     background-color: #EEE;
@@ -46,83 +39,66 @@ a:hover, a:focus, a:active {
     width: 1000px;
     background-color: #FFF;
     margin: 0 auto;
-    height: 950px;
 }
 
 .header {
     background-color: #FFF;
+    height: 220px;
 }
 
-.welcome {
-    text-align: right;
-    float: right;
-    padding: 30px;
+.footer{
+    color: #ccc;
+    height: 50px;
+    text-align: center;
+    margin: 50px;
+    clear: both;
 }
 
-.sidebar1 {
+.middle {
+    background-color: #FFF;
+    width: 100%;
+}
+
+.left_menu {
     float: left;
     width: 20%;
     padding-bottom: 10px;
     margin: 10px;
 }
 
-.letters {
-    float: left;
-    margin: 5px 10px 5px 100px;
-}
-
-.book_list {
+.content {
     padding: 10px 0;
     width: 75%;
     float: left;
 }
 
-.book_info {
-    width: 240px;
-    padding: 10px 0;
-    float: left;
-}
-
-.book_title {
-    color: #378de5;
-    font-weight: bold;
-    font-size: 15px;
-    height: 70px;
-    text-align: center;
-}
-
-.book_image img {
-    display: block;
-    margin: 0 auto;
-}
-
-.book_details {
-    padding: 0 5px 0 25px;
-}
-
-ul.nav {
-    list-style: none;
-    margin-bottom: 15px;
-}
-
-ul.nav li {
-
-}
-
-ul.nav a:hover, ul.nav a:focus, ul.nav a:active{
+.genres a:hover, a:focus, a:active {
     background-color: #FFF;
     color: #999;
 }
 
-.search_form {
+.genres a:visited {
+    padding: 3px 3px 3px 15px;
+    display: block;
+    text-decoration: none;
+    color: #000;
+}
+
+.search_div {
     margin: 20px;
     text-align: left;
     background-color: #dbe4f6;
     height: 35px;
     vertical-align: middle;
     padding: 5px;
+    width: 95%;
     float: left;
-    width: 920px;
+}
+
+.search_form {
+    text-align: right;
+    float: right;
+    width: 100%;
 }
 
 .logo {
@@ -140,8 +116,11 @@ ul.nav a:hover, ul.nav a:focus, ul.nav a:active{
     padding-top: 80px;
 }
 
-select {
-    width: 90px;
+.welcome {
+    text-align: right;
+    padding-top: 50px;
+    font-weight: normal;
+    float: right;
 }
 
 .search_btn {
@@ -158,6 +137,8 @@ select {
     font-size: 12px;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
+    float: left;
+    margin: 0 10px 0 10px;
 }
 
 .search_btn:hover {
@@ -169,4 +150,71 @@ select {
     background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
     text-decoration: none;
     cursor: pointer;
+}
+
+.book_list {
+    float: left;
+    width: 750px;
+}
+
+.book_list h3 {
+    text-align: center;
+    padding: 0;
+    margin: 0;
+}
+
+.book_title {
+    height: 50px;
+    float: left;
+}
+
+.book_title a {
+    color: #378de5;
+    font-weight: bold;
+    font-size: 15px;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+}
+
+.book_info {
+    width: 210px;
+    height: 450px;
+    font-size: 12px;
+    float: left;
+    margin: 15px;
+}
+
+.book_image {
+    height: 250px;
+    width: 190px;
+    float: left;
+}
+
+.book_details {
+    float: left;
+    margin-top: 10px;
+}
+
+.letters {
+    float: left;
+    height: 20px;
+    margin: 10px;
+}
+
+.letters a {
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.search_string {
+    width: 730px;
+    float: left;
+    padding: 3px;
+    margin: 6px;
+}
+
+.selector {
+    margin: 9px 2px;
 }
