--- a/web/templates/header.xhtml
+++ b/web/templates/header.xhtml
@@ -28,8 +28,8 @@
         <div class="search_div">
             <h:form styleClass="search_form">
                 <h:inputText id="search_string" styleClass="search_string"/>
-                <h:commandButton value="#{msg.search}" styleClass="search_button"/>
-                <h:selectOneMenu value="#{searchController.searchType}">
+                <h:commandButton value="#{msg.search}" styleClass="search_btn"/>
+                <h:selectOneMenu value="#{searchController.searchType}" styleClass="selector">
                     <f:selectItems value="${searchController.searchList}"/>
                 </h:selectOneMenu>
             </h:form>
