--- a/web/templates/header.xhtml
+++ b/web/templates/header.xhtml
@@ -21,8 +21,8 @@
         </div>
 
         <div class="welcome">
-            <h5>#{msg.welcome}</h5>
-            <h6>#{msg.exit}</h6>
+            <h5>#{msg.welcome}, #{user.username}!</h5>
+            <a href="../index.xhtml">#{msg.exit}</a>
         </div>
 
         <div class="search_div">
@@ -33,6 +33,12 @@
                     <f:selectItems value="${searchController.searchList}"/>
                 </h:selectOneMenu>
             </h:form>
+        </div>
+
+        <div class="letters">
+            <ui:repeat value="#{searchController.russianLetters}" var="letter">
+                <a href="#">#{letter}</a>
+            </ui:repeat>
         </div>
 
     </ui:composition>
