--- a/web/templates/header.xhtml
+++ b/web/templates/header.xhtml
@@ -21,14 +21,16 @@
         </div>
 
         <div class="welcome">
-            <h5>#{msg.welcome}, #{user.username}!</h5>
-            <a href="../index.xhtml">#{msg.exit}</a>
+            <h:form>
+                <h5>#{msg.welcome}, #{user.username}!</h5>
+                <h:commandLink action="#{loginController.exit()}" value="#{msg.exit}"/>
+            </h:form>
         </div>
 
         <div class="search_div">
             <h:form styleClass="search_form">
-                <h:inputText id="search_string" styleClass="search_string"/>
-                <h:commandButton value="#{msg.search}" styleClass="search_btn"/>
+                <h:inputText id="search_string" styleClass="search_string" value="#{searchController.searchString}"/>
+                <h:commandButton value="#{msg.search}" styleClass="search_btn" action="#{searchController.fillBooksBySearch()}"/>
                 <h:selectOneMenu value="#{searchController.searchType}" styleClass="selector">
                     <f:selectItems value="${searchController.searchList}"/>
                 </h:selectOneMenu>
@@ -36,9 +38,13 @@
         </div>
 
         <div class="letters">
-            <ui:repeat value="#{searchController.russianLetters}" var="letter">
-                <a href="#">#{letter}</a>
-            </ui:repeat>
+            <h:form>
+                <ui:repeat value="#{searchController.russianLetters}" var="letter">
+                    <h:commandLink action="#{searchController.fillBooksByLetter()}" value="#{letter}">
+                        <f:param name="letter" value="#{letter}"/>
+                    </h:commandLink>
+                </ui:repeat>
+            </h:form>
         </div>
 
     </ui:composition>
