--- a/web/templates/left_menu.xhtml
+++ b/web/templates/left_menu.xhtml
@@ -16,7 +16,8 @@
 
         <h:form styleClass="genres">
             <ui:repeat value="#{genreController.genreList}" var="g" >
-                <h:commandLink action="#{searchController.fillBooksByGenre}" value="#{g.name}">
+                <h:commandLink action="#{searchController.fillBooksByGenre}" value="#{g.name}"
+                               styleClass="#{g.id == searchController.selectedGenreId ? 'selected_link':''}">
                     <f:param name="genre_id" value="#{g.id}"/>
                 </h:commandLink>
             </ui:repeat>
