added ajax parts

--- a/web/templates/library_tamplate.xhtml
+++ b/web/templates/library_tamplate.xhtml
@@ -11,8 +11,14 @@
 <h:head>
     <title><ui:insert name="title"/></title>
     <h:outputStylesheet library="CSS" name="style_main.css"/>
+    <h:outputScript library="js" name="library.js" target="head"/>
 </h:head>
 <h:body>
+
+    <div id="loading_wrapper">
+        <p>#{msg.loading}...</p>
+    </div>
+
     <div class="container">
 
         <div class="header">
@@ -29,10 +35,12 @@
             </div>
             <div class="content">
 
-                <p><strong>#{msg.book_count} #{searchController.totalBooksCount}</strong></p>
+                <p><strong><ui:insert name="books_count"/></strong></p>
 
                 <div class="pager">
-                    <ui:insert name="paginator"/>
+                    <h:panelGroup id="pages1" layout="block">
+                        <ui:insert name="paginator"/>
+                    </h:panelGroup>
                 </div>
 
                 <div class="content_books">
@@ -42,7 +50,9 @@
                 </div>
 
                 <div class="pager">
-                    <ui:insert name="paginator"/>
+                    <h:panelGroup id="pages2" layout="block">
+                        <ui:insert name="paginator"/>
+                    </h:panelGroup>
                 </div>
 
             </div>
