--- a/web/resources/CSS/style_main.css
+++ b/web/resources/CSS/style_main.css
@@ -5,48 +5,39 @@ body {
     padding: 0;
     color: #000;
 }
-
 ul, ol, dl {
     padding: 0;
     margin: 0;
 }
-
 h1, h2, h3, h4, h5, h6, p {
     margin-top: 0;
     margin-bottom: 5px;
     padding-right: 15px;
     padding-left: 15px;
 }
-
 a img {
     border: none;
 }
-
 a:link {
     color: #414958;
     text-decoration: underline;
 }
-
 a:visited {
     color: #4E5869;
     text-decoration: underline;
 }
-
 a:hover, a:focus, a:active {
     text-decoration: none;
 }
-
 .container {
     width: 1000px;
     background-color: #FFF;
     margin: 0 auto;
 }
-
 .header {
     background-color: #FFF;
     height: 280px;
 }
-
 .footer{
     color: #ccc;
     height: 50px;
@@ -54,42 +45,34 @@ a:hover, a:focus, a:active {
     margin: 50px;
     clear: both;
 }
-
 .middle {
     background-color: #FFF;
     width: 100%;
 }
-
 .left_menu {
     float: left;
     width: 20%;
     padding-bottom: 10px;
     margin: 10px;
 }
-
 .content {
     padding: 10px 0;
     width: 75%;
     float: left;
 }
-
-
 .genres a:hover, a:focus, a:active {
     background-color: #FFF;
     color: #999;
 }
-
 .genres a, a:visited {
     padding: 15px 3px 3px 15px;
     display: block;
     text-decoration: none;
     color: #000;
 }
-
 .genres a.selected_link {
     color: red;
 }
-
 .search_div {
     margin: 0 15px 15px;
     text-align: left;
@@ -100,13 +83,11 @@ a:hover, a:focus, a:active {
     width: 95%;
     float: left;
 }
-
 .search_form {
     text-align: right;
     float: right;
     width: 100%;
 }
-
 .logo {
     text-align: left;
     padding: 15px;
@@ -114,26 +95,22 @@ a:hover, a:focus, a:active {
     width: 120px;
     height: 119px;
 }
-
 .descr {
     float: left;
     text-align: right;
     width: 480px;
     padding-top: 80px;
 }
-
 .welcome {
     text-align: right;
-    padding-top: 50px;
+    padding-top: 25px;
     font-weight: normal;
     float: right;
 }
-
 .welcome a {
     margin-right: 15px;
     font-size: 10px;
 }
-
 .search_btn {
     background: #039aff;
     background-image: -webkit-linear-gradient(top, #039aff, #132c6b);
@@ -151,7 +128,6 @@ a:hover, a:focus, a:active {
     float: left;
     margin: 0 10px 0 10px;
 }
-
 .search_btn:hover {
     background: #3cb0fd;
     background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
@@ -162,23 +138,19 @@ a:hover, a:focus, a:active {
     text-decoration: none;
     cursor: pointer;
 }
-
 .book_list {
     float: left;
     width: 750px;
 }
-
 .book_list h3 {
     text-align: center;
     padding: 0;
     margin: 0;
 }
-
 .book_title {
     height: 50px;
     float: left;
 }
-
 .book_title a {
     color: #378de5;
     font-weight: bold;
@@ -187,22 +159,18 @@ a:hover, a:focus, a:active {
     margin: 0;
     text-decoration: none;
 }
-
 .col1 {
     vertical-align: top;
 }
-
 .col2 {
     vertical-align: top;
     width: 240px;
 }
-
 .col2 a {
     font-weight: bold;
     color: #378de5;
     font-size: 15px;
 }
-
 .col2 a.content_link {
     margin-left: 8px;
 }
@@ -210,12 +178,10 @@ a:hover, a:focus, a:active {
 .col2 p {
     font-size: 12px;
 }
-
 .col3 {
     vertical-align: top;
     width: 350px;
 }
-
 .book_info {
     width: 210px;
     height: 450px;
@@ -223,23 +189,19 @@ a:hover, a:focus, a:active {
     float: left;
     margin: 15px;
 }
-
 .book_image {
     height: 250px;
     width: 190px;
     float: left;
 }
-
 .book_details {
     float: left;
     margin-top: 10px;
     font-size: 15px;
 }
-
 .read_image {
     float: left;
 }
-
 .letters {
     float: left;
     height: 20px;
@@ -248,7 +210,6 @@ a:hover, a:focus, a:active {
     background-color: #EEE;
     padding: 15px;
 }
-
 .letters a {
     text-decoration: none;
     font-size: 15px;
@@ -256,41 +217,34 @@ a:hover, a:focus, a:active {
     margin: 5px;
     color: #4d6cd3;
 }
-
 .letters a.selected_letter {
     color: red;
 }
-
 .search_string {
     width: 730px;
     float: left;
     padding: 3px;
     margin: 6px;
 }
-
 .selector {
     margin: 9px 2px;
+    width: 90px;
 }
-
 .pager {
     margin: 15px;
     width: 100%;
     float: left;
 }
-
 .pager a {
     margin-left: 5px;
     margin-top: 50px;
 }
-
 .pager a.selected_page {
     color: red;
 }
-
 .ajaxLoading {
     color: #440000;
 }
-
 #loading_wrapper{
     width: 100%;
     display: block;
@@ -298,7 +252,6 @@ a:hover, a:focus, a:active {
     position: fixed;
     display: none;
 }
-
 #loading_wrapper p{
     background-color: #fde88e;
     width: 100px;
